Fixed native tests